# lilo

./: .gitmodules  ChangeLog.md  LICENSE  README.md  lilo.cabal  stack.yaml
docs/: 2017-08-18-a-lambda-calculus-is-born.md  2017-08-21-implementing-pairs.md  2017-08-22-sum-types.md  2017-08-28-hindley-milner-type-inference.md  2017-09-22-syntax-a-la-carte.md  READING.md
script/: path  run
src/: ALaCarte.hs  Checker.hs  Eval.hs  Infer.hs  Interpreter.hs  Interpreter2.hs  NanoParsec.hs  Parser.hs  Pretty.hs  Syntax.hs
src/Typed/: Checker.hs  Interpreter.hs  Parser.hs  Pretty.hs  Syntax.hs
src/Typed2/: Checker.hs  Interpreter.hs  Parser.hs  Pretty.hs  Syntax.hs
src/Untyped/: Interpreter.hs  Interpreter2.hs  NanoParsec.hs  Parser.hs  Pretty.hs  Syntax.hs
