name:                lilo
version:             0.1.0.0
synopsis: A tiny lambda calculus DSL
license:             MIT
license-file:        LICENSE
author:              Timothy Clem
maintainer:          timothy.clem@gmail.com
build-type:          Simple
-- Extra files to be distributed with the package, such as examples or a
-- README.
-- extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable lilo
  -- .hs or .lhs file containing the Main module.
  main-is:             Main.hs

  -- Modules included in this executable, other than Main.
  other-modules:       Syntax
                    --  , Checker
                     , Pretty
                    --  , Parser
                    --  , Infer
                     , Eval
                     , ALaCarte

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:

  -- Other library packages from which modules are imported.
  build-depends:       base >=4.8 && <5
                     , containers
                     , effects
                     , mtl
                     , parsec
                     , pretty
  -- Directories containing source files.
  hs-source-dirs:      src

  -- Base language which the package is written in.
  default-language:    Haskell2010
